src/parser/snapshots/crochet__parser__tests__tuples-2.snap
---
source: src/parser/mod.rs
expression: "parse(\"let x = [1, 2, 3]\")"
---
Program {
    body: [
        VarDecl {
            span: 0..17,
            pattern: Ident(
                BindingIdent {
                    span: 4..5,
                    id: Ident {
                        span: 4..5,
                        name: "x",
                    },
                    type_ann: None,
                },
            ),
            init: Some(
                Tuple(
                    Tuple {
                        span: 8..17,
                        elements: [
                            Lit(
                                Num(
                                    Num {
                                        span: 9..10,
                                        value: "1",
                                    },
                                ),
                            ),
                            Lit(
                                Num(
                                    Num {
                                        span: 12..13,
                                        value: "2",
                                    },
                                ),
                            ),
                            Lit(
                                Num(
                                    Num {
                                        span: 15..16,
                                        value: "3",
                                    },
                                ),
                            ),
                        ],
                    },
                ),
            ),
            declare: false,
        },
    ],
}
