src/parser/snapshots/crochet__parser__tests__type_annotations-4.snap
---
source: src/parser/mod.rs
expression: "parse(\"let p: Point = {x: 5, y: 10}\")"
---
Program {
    body: [
        Decl {
            span: 0..28,
            pattern: Ident(
                BindingIdent {
                    span: 4..12,
                    id: Ident {
                        span: 4..12,
                        name: "p",
                    },
                    type_ann: Some(
                        TypeRef(
                            TypeRef {
                                span: 7..12,
                                name: "Point",
                                type_params: None,
                            },
                        ),
                    ),
                },
            ),
            value: Obj(
                Obj {
                    span: 15..28,
                    properties: [
                        Property {
                            span: 16..20,
                            name: "x",
                            value: Lit(
                                Num(
                                    Num {
                                        span: 19..20,
                                        value: "5",
                                    },
                                ),
                            ),
                        },
                        Property {
                            span: 22..27,
                            name: "y",
                            value: Lit(
                                Num(
                                    Num {
                                        span: 25..27,
                                        value: "10",
                                    },
                                ),
                            ),
                        },
                    ],
                },
            ),
        },
    ],
}
