src/parser/snapshots/crochet__parser__tests__type_annotations-6.snap
---
source: src/parser/mod.rs
expression: "parse(\"let add = <T>(a: T, b: T): T => a + b\")"
---
Program {
    body: [
        Decl {
            span: 0..37,
            pattern: Ident(
                BindingIdent {
                    span: 4..7,
                    id: Ident {
                        span: 4..7,
                        name: "add",
                    },
                    type_ann: None,
                },
            ),
            value: Lambda(
                Lambda {
                    span: 10..37,
                    args: [
                        Ident(
                            BindingIdent {
                                span: 14..18,
                                id: Ident {
                                    span: 14..18,
                                    name: "a",
                                },
                                type_ann: Some(
                                    TypeRef(
                                        TypeRef {
                                            span: 17..18,
                                            name: "T",
                                            type_params: None,
                                        },
                                    ),
                                ),
                            },
                        ),
                        Ident(
                            BindingIdent {
                                span: 20..24,
                                id: Ident {
                                    span: 20..24,
                                    name: "b",
                                },
                                type_ann: Some(
                                    TypeRef(
                                        TypeRef {
                                            span: 23..24,
                                            name: "T",
                                            type_params: None,
                                        },
                                    ),
                                ),
                            },
                        ),
                    ],
                    body: Op(
                        Op {
                            span: 32..37,
                            op: Add,
                            left: Ident(
                                Ident {
                                    span: 32..33,
                                    name: "a",
                                },
                            ),
                            right: Ident(
                                Ident {
                                    span: 36..37,
                                    name: "b",
                                },
                            ),
                        },
                    ),
                    is_async: false,
                    type_params: Some(
                        [
                            TypeParam {
                                span: 11..12,
                                id: Ident {
                                    span: 11..12,
                                    name: "T",
                                },
                                constraint: None,
                                default: None,
                            },
                        ],
                    ),
                    return_type: Some(
                        TypeRef(
                            TypeRef {
                                span: 27..28,
                                name: "T",
                                type_params: None,
                            },
                        ),
                    ),
                },
            ),
        },
    ],
}
