src/parser/snapshots/crochet__parser__tests__type_annotations-7.snap
---
source: src/parser/mod.rs
expression: "parse(\"let add = <T extends number | string>(a: T, b: T): T => a + b\")"
---
Program {
    body: [
        Decl {
            span: 0..61,
            pattern: Ident(
                BindingIdent {
                    span: 4..7,
                    id: Ident {
                        span: 4..7,
                        name: "add",
                    },
                    type_ann: None,
                },
            ),
            value: Lambda(
                Lambda {
                    span: 10..61,
                    args: [
                        Ident(
                            BindingIdent {
                                span: 38..42,
                                id: Ident {
                                    span: 38..42,
                                    name: "a",
                                },
                                type_ann: Some(
                                    TypeRef(
                                        TypeRef {
                                            span: 41..42,
                                            name: "T",
                                            type_params: None,
                                        },
                                    ),
                                ),
                            },
                        ),
                        Ident(
                            BindingIdent {
                                span: 44..48,
                                id: Ident {
                                    span: 44..48,
                                    name: "b",
                                },
                                type_ann: Some(
                                    TypeRef(
                                        TypeRef {
                                            span: 47..48,
                                            name: "T",
                                            type_params: None,
                                        },
                                    ),
                                ),
                            },
                        ),
                    ],
                    body: Op(
                        Op {
                            span: 56..61,
                            op: Add,
                            left: Ident(
                                Ident {
                                    span: 56..57,
                                    name: "a",
                                },
                            ),
                            right: Ident(
                                Ident {
                                    span: 60..61,
                                    name: "b",
                                },
                            ),
                        },
                    ),
                    is_async: false,
                    type_params: Some(
                        [
                            TypeParam {
                                span: 11..36,
                                id: Ident {
                                    span: 11..12,
                                    name: "T",
                                },
                                constraint: Some(
                                    Union(
                                        UnionType {
                                            span: 21..36,
                                            types: [
                                                Prim(
                                                    PrimType {
                                                        span: 21..27,
                                                        prim: Num,
                                                    },
                                                ),
                                                Prim(
                                                    PrimType {
                                                        span: 30..36,
                                                        prim: Str,
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                ),
                                default: None,
                            },
                        ],
                    ),
                    return_type: Some(
                        TypeRef(
                            TypeRef {
                                span: 51..52,
                                name: "T",
                                type_params: None,
                            },
                        ),
                    ),
                },
            ),
        },
    ],
}
