src/parser/snapshots/crochet__parser__tests__type_decls.snap
---
source: src/parser/mod.rs
expression: "parse(\"type Num = number\")"
---
Program {
    body: [
        TypeDecl {
            span: 0..17,
            declare: false,
            id: Ident {
                span: 5..8,
                name: "Num",
            },
            type_ann: Prim(
                PrimType {
                    span: 11..17,
                    prim: Num,
                },
            ),
        },
    ],
}
